mejorar estilos, agrgar fecha e imagen en grupos

--- a/frontend/src/pages/Diplomas.astro
+++ b/frontend/src/pages/Diplomas.astro
@@ -3,6 +3,6 @@ import Administracion from "../layouts/Administracion.astro";
 import GruposDiplomasC from "../components/GruposDiplomas";
 ---
 
-<Administracion>
+<Administracion title="Diplomas">
     <GruposDiplomasC client:load />
 </Administracion>
