--- a/frontend/src/pages/Plantillas.astro
+++ b/frontend/src/pages/Plantillas.astro
@@ -3,6 +3,6 @@ import Administracion from "../layouts/Administracion.astro";
 import PlantillasC from "../components/Plantillas";
 ---
 
-<Administracion>
+<Administracion title="Plantillas">
     <PlantillasC client:load />
 </Administracion>
