--- a/frontend/src/pages/Usuarios.astro
+++ b/frontend/src/pages/Usuarios.astro
@@ -3,6 +3,6 @@ import Administracion from "../layouts/Administracion.astro";
 import UsuariosC from "../components/Usuarios";
 ---
 
-<Administracion>
+<Administracion title="Usuarios">
     <UsuariosC client:load />
 </Administracion>
