--- a/frontend/src/pages/grupo/[id].astro
+++ b/frontend/src/pages/grupo/[id].astro
@@ -6,6 +6,6 @@ const { id } = Astro.params;
 
 ---
 
-<Administracion>
+<Administracion title="Grupo">
     <DiplomasC id={id} client:load/>
 </Administracion>
