--- a/frontend/src/layouts/Administracion.astro
+++ b/frontend/src/layouts/Administracion.astro
@@ -1,12 +1,19 @@
 ---
 import NavDer from "../components/menu/NavDer";
+
+interface Props {
+    title?: string;
+}
+
+const { title = "Dashboard" } = Astro.props;
 ---
 
 <html lang="es">
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dashboard</title>
+    <link rel="icon" type="image/svg+xml" href="/favicon.png" />
+    <title>Administrador | {title}</title>
 </head>
 <body class="bg-gray-100">
     
