--- a/frontend/src/layouts/Administracion.astro
+++ b/frontend/src/layouts/Administracion.astro
@@ -5,9 +5,10 @@ interface Props {
     title?: string;
 }
 
-const { title = "Dashboard" } = Astro.props;
+const { title = "Panel" } = Astro.props;
 ---
 
+<!doctype html>
 <html lang="es">
 <head>
     <meta charset="UTF-8" />
@@ -16,12 +17,9 @@ const { title = "Dashboard" } = Astro.props;
     <title>Administrador | {title}</title>
 </head>
 <body class="bg-gray-100">
-    
-    <NavDer client:load />
-
-    <!-- Contenedor principal -->
+    <NavDer client:only="react" />
     <main class="flex-1 mt-16 px-4 py-8 overflow-auto">
-        <slot /> <!-- Aquí se inyectará el contenido de cada página -->
+        <slot />
     </main>
 </body>
 </html>
